# LeS-minaire-BOT-

LeSeminaire/: README.md  app.py  bot.py  bot_launcher.py  bot_runner.py  database.py  debug.py  discord_bot.py  discord_bot_launcher.py  discord_bot_workflow.py  help_command.py  main.py  main_for_workflow_discord.py  models.py  moderation.py  pyproject.toml  replit.nix  role_manager.py  run_bot.py  run_discord_bot.py  run_discord_bot.sh  run_web.py  start.sh  start_discord_bot.sh  start_web.sh  start_web_8080.sh  start_web_app.sh  tmp_flask.py  web_app.py  web_app_8080.py  web_app_launcher.py  welcome_card.py  workflow_discord_bot.py
LeSeminaire/attached_assets/: Pasted-import-discord-from-discord-ext-import-commands-import-os-from-dotenv-import-load-dotenv-Chargeme-1743600256421.txt
LeSeminaire/cogs/: analytics.py  collaborations.py  messenger.py  music.py  resources.py  security.py  shield.py
LeSeminaire/static/css/: style.css
LeSeminaire/static/js/: main.js
LeSeminaire/templates/: 404.html  500.html  base.html  commands.html  commands_doc.html  contact.html  features.html  index.html  realtime_stats.html  resources.html  security.html  stats.html
LeSeminaire/templates/admin/: dashboard.html  login.html  resource_form.html  sample_form.html  users.html
